--- a/ModeloDeReferencia.UI/Views/Home/Index.cshtml
+++ b/ModeloDeReferencia.UI/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="" ng-click="init()">Modelo de Referência</a></li>
                 <li><a href="" ng-click="openCategoria()">Categoria</a></li>
+                <li><a href="" ng-click="openNivelMaturidade()">Nível Maturidade</a></li>
             </ul>
         </div>
     </div>
