--- a/ModeloDeReferencia.UI/Views/Home/Index.cshtml
+++ b/ModeloDeReferencia.UI/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
                 <li><a href="" ng-click="init()">Modelo de Referência</a></li>
                 <li><a href="" ng-click="openCategoria()">Categoria</a></li>
                 <li><a href="" ng-click="openNivelMaturidade()">Nível Maturidade</a></li>
+                <li><a href="" ng-click="openAreaProcesso()">Area Processo</a></li>
             </ul>
         </div>
     </div>
