--- a/ModeloDeReferencia.UI/Angular/Views/PraticaEspecifica/ModalEdit.html
+++ b/ModeloDeReferencia.UI/Angular/Views/PraticaEspecifica/ModalEdit.html
@@ -43,7 +43,23 @@
                     <option value="">Selecione...</option>
                 </select>
             </div>     
-            <!-- END META ESPECIFICA -->            
+            <!-- END META ESPECIFICA -->
+            <!-- PRODUTO TRABALHO -->
+            <div class="col-md-12">
+                <p class="title"><strong>PRODUTO TRABALHO: *</strong> </p>
+                <ng-messages ng-if="formAreaProcesso.$submitted"
+                             for="formPraticaEspecifica.ProdutoTrabalho.$error">
+                    <ng-message when="required" class="error-message">
+                        <p class="bg-danger"><i class="fa fa-warning"></i> Este campo é obrigatório</p>
+                    </ng-message>
+                </ng-messages>
+            </div>
+            <div class="col-md-12">
+                <select class="form-control" name="MetaEspecifica" ng-model="praticaEspecifica.ProdutoTrabalho" ng-options="produtoTrabalho.Nome for produtoTrabalho in produtoTrabalhoList" ng-class="(formPraticaEspecifica.$submitted && !praticaEspecifica.ProdutoTrabalho) ? 'validation-error' : ''" required>
+                    <option value="">Selecione...</option>
+                </select>
+            </div>
+            <!-- END PRODUTO TRABALHO -->   
             <!-- DESCRICAO -->
             <div class="col-md-12">
                 <p class="title"><strong>DESCRIÇÃO: </strong> </p>
