--- a/ModeloDeReferencia.UI/Views/Home/Index.cshtml
+++ b/ModeloDeReferencia.UI/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
                 <li><a href="" ng-click="openProdutoTrabalho()">Produto Trabalho</a></li>
                 <li><a href="" ng-click="openMetaEspecifica()">Meta Especifica</a></li>
                 <li><a href="" ng-click="openPraticaEspecifica()">Pratica Especifica</a></li>
+                <li><a href="" ng-click="openModelo()">Modelo</a></li>
             </ul>
         </div>
     </div>
