--- a/ModeloDeReferencia.UI/Views/Home/Index.cshtml
+++ b/ModeloDeReferencia.UI/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
                 <li><a href="" ng-click="openMetaEspecifica()">Meta Especifica</a></li>
                 <li><a href="" ng-click="openPraticaEspecifica()">Pratica Especifica</a></li>
                 <li><a href="" ng-click="openModelo()">Modelo</a></li>
+                <li><a href="" ng-click="openNivelCapacidade()">Nível Capacidade</a></li>
             </ul>
         </div>
     </div>
