--- a/ModeloDeReferencia.UI/Views/Home/Index.cshtml
+++ b/ModeloDeReferencia.UI/Views/Home/Index.cshtml
@@ -1,18 +1,17 @@
 ﻿<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="" ng-click="init()">Modelo de Referência</a></li>
-                <li><a href="" ng-click="openCategoria()">Categoria</a></li>
-                <li><a href="" ng-click="openNivelMaturidade()">Nível Maturidade</a></li>
-                <li><a href="" ng-click="openAreaProcesso()">Area Processo</a></li>
-                <li><a href="" ng-click="openProdutoTrabalho()">Produto Trabalho</a></li>
-                <li><a href="" ng-click="openMetaEspecifica()">Meta Especifica</a></li>
-                <li><a href="" ng-click="openPraticaEspecifica()">Pratica Especifica</a></li>
-                <li><a href="" ng-click="openModelo()">Modelo</a></li>
-                <li><a href="" ng-click="openNivelCapacidade()">Nível Capacidade</a></li>
-            </ul>
-        </div>
+    <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+            <li><a href="" ng-click="init()">Modelo de Referência</a></li>
+            <li><a href="" ng-click="openCategoria()">Categoria</a></li>
+            <li><a href="" ng-click="openNivelMaturidade()">Nível Maturidade</a></li>
+            <li><a href="" ng-click="openAreaProcesso()">Area Processo</a></li>
+            <li><a href="" ng-click="openProdutoTrabalho()">Produto Trabalho</a></li>
+            <li><a href="" ng-click="openMetaEspecifica()">Meta Especifica</a></li>
+            <li><a href="" ng-click="openPraticaEspecifica()">Pratica Especifica</a></li>
+            <li><a href="" ng-click="openModelo()">Modelo</a></li>
+            <li><a href="" ng-click="openNivelCapacidade()">Nível Capacidade</a></li>
+            <li><a href="" ng-click="openMetaGenerica()">Meta Genérica</a></li>
+        </ul>
     </div>
 </div>
 
@@ -22,8 +21,8 @@
     </div>
 </div>
 
-<footer class="footer">    
-    <p class="text-center">&copy; @DateTime.Now.Year - Modelo de Referência</p>  
+<footer class="footer">
+    <p class="text-center">&copy; @DateTime.Now.Year - Modelo de Referência</p>
 </footer>
 
 
