--- a/ModeloDeReferencia.UI/Angular/Views/ProdutoTrabalho/ModalEdit.html
+++ b/ModeloDeReferencia.UI/Angular/Views/ProdutoTrabalho/ModalEdit.html
@@ -4,7 +4,7 @@
         <h4 class="text-center"><strong>{{action == 'I' ? 'CADASTRAR' : 'EDITAR'}} PRODUTO TRABALHO</strong></h4>
     </div>
 
-    <form name="formProdutoTrabalho" ng-submit="" novalidate>
+    <form name="formProdutoTrabalho" ng-submit="" enctype="multipart/form-data" novalidate>
         <div class="dialog-body">
             <!-- NOME -->
             <div class="col-md-12">
