Modelo e AreaProcesso ajustes

--- a/ModeloDeReferencia.UI/Angular/Views/AreaProcesso/Index.html
+++ b/ModeloDeReferencia.UI/Angular/Views/AreaProcesso/Index.html
@@ -28,6 +28,7 @@
                         <th id="descricao">DESCRIÇÃO</th>
                         <th id="catgoria">CATEGORIA</th>
                         <th id="nivelMaturidade">NÍVEL MATURIDADE</th>
+                        <th id="modelo">MODELO</th>
                         <th>&nbsp;</th>
                     </tr>
                 </thead>
@@ -38,6 +39,7 @@
                         <td>{{areaProcesso.Descricao}}</td>
                         <td>{{areaProcesso.NivelMaturidade.Nome}}</td>
                         <td>{{areaProcesso.Categoria.Nome}}</td>
+                        <td>{{areaProcesso.Modelo.Nome}}</td>
                         <td class="col-md-2 text-center">
                             <div class="grid btn-group" ng-init="areaProcesso.caretUp = false">
                                 <button type="button" ng-click="areaProcesso.caretUp = !areaProcesso.caretUp; $root.adjustMenu($event)" ng-blur="areaProcesso.caretUp = false" class="btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
