--- a/ModeloDeReferencia.UI/Angular/Views/PraticaEspecifica/ModalEdit.html
+++ b/ModeloDeReferencia.UI/Angular/Views/PraticaEspecifica/ModalEdit.html
@@ -1,7 +1,7 @@
 ﻿<div class="dialog-custom" ng-init="GetAllSmallTypes()">
 
     <div class="dialog-heading">
-        <h4 class="text-center"><strong>{{action == 'I' ? 'CADASTRAR' : 'EDITAR'}} PRATICA ESPECIFICA</strong></h4>
+        <h4 class="text-center"><strong>{{action == 'I' ? 'CADASTRAR' : 'EDITAR'}} PRÁTICA ESPECÍFICA</strong></h4>
     </div>
 
     <form name="formPraticaEspecifica" ng-submit="" novalidate>
