--- a/ModeloDeReferencia.UI/Angular/Views/Modelo/Index.html
+++ b/ModeloDeReferencia.UI/Angular/Views/Modelo/Index.html
@@ -25,8 +25,7 @@
                     <tr>
                         <th id="nome">NOME</th>
                         <th id="sigla">SIGLA</th>
-                        <th id="descricao">DESCRIÇÃO</th>
-                        <th id="areaProcesso">ÁREA PROCESSO</th>                        
+                        <th id="descricao">DESCRIÇÃO</th>                                            
                         <th>&nbsp;</th>
                     </tr>
                 </thead>
@@ -34,8 +33,7 @@
                     <tr dir-paginate="modelo in modeloList | filter:search | itemsPerPage:7">
                         <td>{{modelo.Nome}}</td>
                         <td>{{modelo.Sigla}}</td>
-                        <td>{{modelo.Descricao}}</td>
-                        <td>{{modelo.AreaProcesso.Nome}}</td>                        
+                        <td>{{modelo.Descricao}}</td>                                               
                         <td class="col-md-2 text-center">
                             <div class="grid btn-group" ng-init="modelo.caretUp = false">
                                 <button type="button" ng-click="modelo.caretUp = !modelo.caretUp; $root.adjustMenu($event)" ng-blur="modelo.caretUp = false" class="btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
@@ -44,6 +42,7 @@
 
                                 <ul class="dropdown-menu" role="menu">
                                     <li>
+                                        <a href="" ng-click="Show(modelo)"><i class="fa fa-window-restore"></i>&nbsp;Visualizar</a>
                                         <a href="" ng-click="Open('U', modelo)"><i class="fa fa-edit"></i>&nbsp;Editar</a>
                                         <a href="" ng-click="Delete(modelo)"><i class="fa fa-remove"></i>&nbsp;Excluir</a>
                                     </li>
