--- a/ModeloDeReferencia.UI/Angular/Views/Modelo/Index.html
+++ b/ModeloDeReferencia.UI/Angular/Views/Modelo/Index.html
@@ -42,7 +42,7 @@
 
                                 <ul class="dropdown-menu" role="menu">
                                     <li>
-                                        <a href="" ng-click="Show(modelo)"><i class="fa fa-window-restore"></i>&nbsp;Visualizar</a>
+                                        <a href="" ng-click="OpenShow(modelo)"><i class="fa fa-window-restore"></i>&nbsp;Visualizar</a>
                                         <a href="" ng-click="Open('U', modelo)"><i class="fa fa-edit"></i>&nbsp;Editar</a>
                                         <a href="" ng-click="Delete(modelo)"><i class="fa fa-remove"></i>&nbsp;Excluir</a>
                                     </li>
