--- a/ModeloDeReferencia.UI/Views/Home/Index.cshtml
+++ b/ModeloDeReferencia.UI/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="navbar navbar-inverse navbar-fixed-top">
+﻿<div class="navbar navbar-inverse navbar-fixed-top" style="padding-left:8%;">
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li><a href="" ng-click="init()">Modelo de Referência</a></li>
@@ -21,8 +21,10 @@
     </div>
 </div>
 
+<!--
 <footer class="footer">
     <p class="text-center">&copy; @DateTime.Now.Year - Modelo de Referência</p>
 </footer>
+-->
 
 
