--- a/ModeloDeReferencia.UI/Content/Site.css
+++ b/ModeloDeReferencia.UI/Content/Site.css
@@ -29,4 +29,42 @@ footer {
     border: 2px solid #ffb3b3;
 }
 
+/* DivTable.com */
+.divTable {
+    display: table;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.divTableRow {
+    display: table-row;
+}
+
+.divTableHeading {
+    background-color: #EEE;
+    display: table-header-group;
+}
+
+.divTableCell, .divTableHead {
+    border: 1px solid #DCDCDC;
+    display: table-cell;
+    padding: 3px 10px;
+}
+
+.divTableHeading {
+    background-color: #EEE;
+    display: table-header-group;
+    font-weight: bold;
+}
+
+.divTableFoot {
+    background-color: #EEE;
+    display: table-footer-group;
+    font-weight: bold;
+}
+
+.divTableBody {
+    display: table-row-group;
+}
+
 
